--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_script:
   - cd ./public
   - git init
   - git config user.name "ricosmall"
-  - git config user.email "yuxie2013@gmail.com"
+  - git config user.email "805163443@qq.com"
   - git add .
   - git commit -m "Update docs"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
