--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 
 before_script:
  # - npm install -g gulp
+  - git clone https://github.com/ricosmall/hexo-theme-next --depth=1 themes/next
 
 
 script:
