--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,15 @@ cache:
 # S: Build Lifecycle
 install:
   - npm install -g hexo-cli
-  - npm install
-  - npm install hexo-generator-feed@1
+  - npm install -g yarn
+  # - npm install
+  - yarn
+  # - npm install hexo-generator-feed@1
+  - yarn add hexo-generator-feed@1
 
 before_script:
  # - npm install -g gulp
-  - git clone https://github.com/ricosmall/hexo-theme-next --depth=1 themes/next
+  - git clone https://github.com/ricosmall/hexo-theme-next.git --depth=1 ./themes/next
 
 
 script:
