--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   # - npm install
   - yarn
   # - npm install hexo-generator-feed@1
-  - yarn add hexo-generator-feed@1
+  # - yarn add hexo-generator-feed@1
 
 before_script:
  # - npm install -g gulp
