--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ install:
 
 before_script:
  # - npm install -g gulp
-  - git clone https://github.com/ricosmall/hexo-theme-next.git --depth=1 ./themes/next
+  # - git clone https://github.com/ricosmall/hexo-theme-next.git --depth=1 ./themes/next
+  - git clone https://github.com/theme-next/hexo-theme-next.git --depth=1 ./themes/next
 
 
 script:
