--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   # - npm install
   - yarn
   # - npm install hexo-generator-feed@1
-  # - yarn add hexo-generator-feed@1
+  - yarn add hexo-generator-feed@1
 
 before_script:
  # - npm install -g gulp
