--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+# skip_render:
 
 # Writing
 new_post_name: :year-:month-:day-:title.md # File name of new posts
@@ -41,12 +41,12 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  # tab_replace:
 
 # Category & Tag
 default_category: uncategorized
-category_map:
-tag_map:
+# category_map:
+# tag_map:
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
